@@ -1,3 +1,8 @@
+2015-07-18  Eli Zaretskii  <eliz@gnu.org>
+
+	* info/nodes.c (find_node_from_tag, info_node_of_tag): Use
+	FILENAME_CMP to compare file names.
+
 2015-07-16  Gavin Smith  <gavinsmith0123@gmail.com>
 
 	* info/nodes.c (info_find_file): If filename has slash, look for
